<package format="2">
  <name>youbot_grasping</name>
  <version>0.0.1</version>
  <description>
  Bridges youbot-manipulation with Vicon
  </description>
  <maintainer email="wbthomason@cs.cornell.edu">Wil Thomason</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>youbot_manipulation</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>vicon_bridge</exec_depend>
  <exec_depend>youbot_manipulation</exec_depend>
</package>
